[package]
name = "typed_html"
version = "0.1.0"
edition = "2021"
authors = ["Linfinity Technologies SRL <linfinitytechnologies@gmail.com>", "Axo Developer Co <hello@axo.dev>", "Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Type checked JSX for Rust"
repository = "https://github.com/Lorinet/typed_html"

[dependencies]
typed_html-macros = { path = "../macros" }
strum = "0.23"
strum_macros = "0.23"
mime = "0.3.13"
language-tags = "0.3"
htmlescape = "0.3.1"
proc-macro-nested = "0.1.3"
